--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,8 @@
     %meta{:content => "", :name => "description"}
     %meta{:content => "", :name => "author"}
 
+    = favicon_link_tag
+
     = stylesheet_link_tag :application, media: :all
     = javascript_include_tag :application
 
