fix style for bbs

--- a/app/assets/stylesheets/bbs.css.scss
+++ b/app/assets/stylesheets/bbs.css.scss
@@ -52,7 +52,7 @@ ul.state-bar {
 }
 
 #bbs-boards {
-  ul.thumbnails > li { width: 47% !important; }
+  ul.thumbnails > li { width: 362px !important; }
   ul.board-list {
     .thumbnail {
       position: relative;
