--- a/app/views/application/_alert.html.haml
+++ b/app/views/application/_alert.html.haml
@@ -2,7 +2,7 @@
   .alert.alert-success
     = button_tag 'x', data: { dismiss: 'alert' }, class: 'close'
     = notice
-- elsif alert
+- if alert
   .alert.alert-error
     = button_tag 'x', data: { dismiss: 'alert' }, class: 'close'
     = alert
