--- a/app/views/bbs/boards/_sidebar.html.haml
+++ b/app/views/bbs/boards/_sidebar.html.haml
@@ -3,7 +3,7 @@
     .box
       %ul.media-list
         %li.media
-          = link_to '#', class: 'pull-left' do
+          = link_to user_path(current_user), class: 'pull-left' do
             %img{:alt => "", "data-src" => "holder.js/80x80"}
           %h4.media-heading
             = current_user.name
@@ -11,7 +11,7 @@
             当前论坛积分： 1000
         %li.media
           %ul.nav.nav-pills
-            %li.active= link_to '100<br/>话题'.html_safe, '#'
+            %li.active= link_to "#{current_user.bbs_posts_count}<br/>话题".html_safe, '#'
             %li.active= link_to '10<br/>粉丝'.html_safe, '#'
             %li.active= link_to '9<br/>关注'.html_safe, '#'
         %li.media.notifications
