--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -60,7 +60,7 @@ section { padding-top: 0; }
 }
 
 .alert {
-  margin-top: 20px;
+  // margin-top: 20px;
   margin-bottom: 0;
   text-align: center;
 }
