--- a/app/views/bbs/boards/index.html.haml
+++ b/app/views/bbs/boards/index.html.haml
@@ -22,10 +22,10 @@
                     %p.desc= child.description
                     %ul.state_bar.clearfix
                       %li
-                        %span= child.bbs_posts_count
+                        %span= child.posts_count
                         个话题
                       %li
-                        %span= child.bbs_posts.recommend.count 
+                        %span= child.posts.recommend.count 
                         个精华
                       %li
                         %span= child.total_replies_count
