--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -31,6 +31,12 @@ section { padding-top: 0; }
     padding: 212px 0 0;
   }
 
+  &.topic {
+    background: image-url("jumbotron/banner-topic.jpg") center center no-repeat;
+    background-repeat: none;
+    padding: 212px 0 0;
+  }
+
   p { text-align: left; margin-left: 160px; margin-bottom: 5px; }
 }
 
@@ -42,7 +48,7 @@ section { padding-top: 0; }
 }
 
 .span3 {
-  margin-top: 15px;
+  // margin-top: 15px;
   .box {
     border: 1px solid #DDD;
     padding: 10px;
