--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -13,7 +13,8 @@
           = main_nav :home do
             = link_to '首页', root_path
           %li= link_to '应用', '#'
-          %li= link_to '专题', '#'
+          = main_nav :topics do
+            = link_to '专题', topics_path
           %li= link_to '下载', '#'
           = main_nav :bbs do
             = link_to '社区', bbs_root_path
@@ -31,7 +32,7 @@
                 = current_user.name
                 %b.caret
               %ul.dropdown-menu
-                %li= link_to '我的吞食天地', user_path(uid: current_user.uid)
+                %li= link_to '我的吞食天地', user_path(current_user)
                 %li= link_to '个人资料', settings_path(type: :profile)
                 %li= link_to '消息设置', settings_path(type: :notifications)
                 %li= link_to '修改密码', edit_user_registration_path
