--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,11 @@
 - content_for :jumbotron do
   .jumbotron.masthead.home
   = render 'social'
+.row
+  %section#home
+    .span4
+    .span4
+    .span4
 
 .row
   .span9
