fix bug for posts page

--- a/app/views/bbs/posts/index.html.haml
+++ b/app/views/bbs/posts/index.html.haml
@@ -15,7 +15,7 @@
           = parent.name
         %li.last
           %span.badge.badge-inverse
-            #{parent.bbs_posts_count}篇帖子
+            #{parent.posts_count}篇帖子
 
       %ul.media-list
         - collection.each do |post|
