--- a/app/assets/stylesheets/bbs.css.scss
+++ b/app/assets/stylesheets/bbs.css.scss
@@ -213,6 +213,7 @@ a.add-post-btn {
   height: 47px;
   display: block;
   font-size: 0;
+  margin-top: 15px;
   margin-bottom: 15px;
   background-image: image-url("add-post-btn.png");
   &:hover {
