--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,37 +1,72 @@
 - content_for :jumbotron do
   .jumbotron.masthead.home
   = render 'social'
-.row
-  %section#home
-    .span4
-    .span4
-    .span4
 
-.row
-  .span9
-    %section#topics
-      .page-header
-        %h1
-          推荐专题
-          %small 推荐专题的简介信息，大家都想一下方案如何写。
-      %ul.thumbnails
-        %li
-          .thumbnail
+%section#home.row
+  .span4.left
+    %img.video-cover{ data: { src: 'holder.js/320x320' } }
+    = link_to '#', class: 'head-title' do
+      %span.left 吞食天地2nd
+      %span.right 资料片
+  .span4.middle
+    .middle-inner
+      .feature.top
+        %h3.head-title
+          平台动态
+        %ul
+          - 4.times do
+            %li
+              = link_to '#' do
+                吞食天地2nd终于发布了...
+                %span 2013-01-01
+      .feature.bottom
+        %h3.head-title
+          论坛新帖
+        %ul
+          - 4.times do
+            %li
+              = link_to '#' do
+                吞食天地2nd终于发布了...
+                %span 2013-01-01
+  .span4.right
+    .wiki
+      %h3 关于平台
+      %ul.clearfix
+        - 6.times do
+          %li
             = link_to '#' do
-              %img{:alt => "", "data-src" => "holder.js/300x200"}
-            .caption
-              %h3= link_to '吞食天地2nd Evolution 进化', '#'
-              %p.desc 在本作中玩家扮演刘备，从第一章“黄巾之乱”开始，一直到最后篡改历史一统天下，总共分为八章。战斗过程除了普通攻击之外还有总攻击 和策略选项，体现了一定的战术性。
-              %ul.state_bar.clearfix
-                %li.rate.clearfix
-                  推荐指数：
-                  .raty{ data: { rate: 3 } }
-                %li
-                  关注：
-                  %span 29001
-                %li
-                  发布了100篇文章、10个视频、58个图片和20个下载信息
-                %li= link_to t('views.layout.topic_detail').html_safe, '#'
+              %i
+              应用接入流程
+    .follow-us.clearfix
+      = link_to '#', class: 'sina-weibo-follow-btn first' do
+        关注微博
+      = link_to '#', class: 'qq-weibo-follow-btn' do
+        关注微博
+
+%section#topics.row
+  .span9
+    .page-header
+      %h1
+        推荐专题
+        %small 推荐专题的简介信息，大家都想一下方案如何写。
+    %ul.thumbnails
+      %li
+        .thumbnail
+          = link_to '#' do
+            %img{:alt => "", "data-src" => "holder.js/300x200"}
+          .caption
+            %h3= link_to '吞食天地2nd Evolution 进化', '#'
+            %p.desc 在本作中玩家扮演刘备，从第一章“黄巾之乱”开始，一直到最后篡改历史一统天下，总共分为八章。战斗过程除了普通攻击之外还有总攻击 和策略选项，体现了一定的战术性。
+            %ul.state_bar.clearfix
+              %li.rate.clearfix
+                推荐指数：
+                .raty{ data: { rate: 3 } }
+              %li
+                关注：
+                %span 29001
+              %li
+                发布了100篇文章、10个视频、58个图片和20个下载信息
+              %li= link_to t('views.layout.topic_detail').html_safe, '#'
   .span3= render '/application/sidebars/home'
 
 
