add home banner

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -42,7 +42,9 @@
         关注微博
       = link_to '#', class: 'qq-weibo-follow-btn' do
         关注微博
-
+%section#home-banner.row
+  .span12
+    %img{ data: { src: 'holder.js/1000x160' } }
 %section#topics.row
   .span9
     .page-header
