--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -108,6 +108,7 @@ section#home {
           color: white;
           text-decoration: none;
           margin-left: 8px;
+          span { padding-left: 10px; }
         }
 
         a.sina-weibo-follow-btn {
@@ -131,12 +132,13 @@ section#home {
       }
     }
     ul {
-      margin: 0 0 10px 20px;
+      margin: 0 0 10px 0px;
+      list-style: none;
 
       li {
         padding: 2px 0;
         a {
-          // color: #424242;
+          color: #424242;
           &:hover { color: black; }
           span { float: right; }
         }
